--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/** @format */
+
 .App {
   text-align: center;
 }
@@ -26,6 +28,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.App .myGithub {
+  color: orange;
 }
 
 @keyframes App-logo-spin {
